fix(style): fix disabled color on Safari

--- a/src/style/normalize.scss
+++ b/src/style/normalize.scss
@@ -60,6 +60,7 @@
   --el-text-color-regular: var(--color-text-primary);
   --el-text-color-primary: var(--color-text-primary);
   --el-text-color-secondary: var(--color-text-secondary);
+  --el-disabled-text-color: var(--color-text-primary);
   --el-border-color-light: var(--color-border-normal);
   --el-color-success: #00B173;
   --el-color-danger: #E44242;
